starting edit actions and delete actions

--- a/templates/edit_rating.html
+++ b/templates/edit_rating.html
@@ -13,12 +13,12 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8">
-      <h1>Add a New Book into the database</h1>
+      <h1>Edit a Book</h1>
         {{ wtf.quick_form(form, novalidate=True) }}
     </div>
   </div>
 </div>
 <hr>
-<p class="space-above"><a href="{{url_for('home')}}">Chekout all the Books</a></p>
+<p class="space-above"><a href="{{url_for('home')}}">Checkout all the Books</a></p>
 <hr>
 {% endblock %}
