--- a/templates/index.html
+++ b/templates/index.html
@@ -16,10 +16,9 @@
     <ul>
         {% for book in books %}
         <li>
-            {{book.title}} - {{book.author}} - {{book.rating}}
+            <a href="{{url_for('delete_book', id=book.id)}}">Delete Book</a>
+            {{book.title}} - By {{book.author}} - {{book.rating}}/10
             <a href="{{url_for('edit_rating', id=book.id)}}">Edit Rating</a>
-            <p>Book Name: {{book.title}}</p>
-            <p>Current Rating {{book.rating}}</p>
         </li>
 
         {% endfor%}
