--- a/templates/delete_rating.html
+++ b/templates/delete_rating.html
@@ -13,8 +13,8 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8">
-      <h1>Edit a Book</h1>
-        {{ wtf.quick_form(edit_form, novalidate=True) }}
+      <h1>Delete a Book</h1>
+        {{ wtf.quick_form(delete_form, novalidate=True) }}
     </div>
   </div>
 </div>
