--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,23 @@
 {% endblock %}
 {% block content %}
 <h1>My Library</h1>
-    {% if books == [] %}
-    <p>Library is empty.</p>
+    {% if all_books == [] %}
+    <p>
+
+        <b>
+            <u>
+                Library is empty.
+            </u>
+        </b>
+    </p>
     {% endif %}
     <ul>
-        {% for book in books %}
+        {% for book in all_books %}
         <li>
             <a href="{{url_for('delete_book', id=book.id)}}">Delete Book</a>
             {{book.title}} - By {{book.author}} - {{book.rating}}/10
             <a href="{{url_for('edit_rating', id=book.id)}}">Edit Rating</a>
         </li>
-
         {% endfor%}
     </ul>
 <hr>
