--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,6 @@
 <h1>My Library</h1>
     {% if all_books == [] %}
     <p>
-
         <b>
             <u>
                 Library is empty.
@@ -23,9 +22,9 @@
     <ul>
         {% for book in all_books %}
         <li>
-            <a href="{{url_for('delete_book', id=book.id)}}">Delete Book</a>
+            <a href="{{url_for('delete_book', del_book_id=book.id)}}">Delete Book</a>
             {{book.title}} - By {{book.author}} - {{book.rating}}/10
-            <a href="{{url_for('edit_rating', id=book.id)}}">Edit Rating</a>
+            <a href="{{url_for('edit_rating', edit_book_id=book.id)}}">Edit Rating</a>
         </li>
         {% endfor%}
     </ul>
